# fuel-core

./: Cargo.toml
.github/workflows/: ci.yml
dap/: Cargo.toml  build.rs
dap-client/: Cargo.toml
dap-client/src/: lib.rs
dap-client/tests/: dap.rs
dap/assets/: debug.sdl
fuel-block-producer/: Cargo.toml
fuel-block-producer/src/: config.rs  lib.rs  ports.rs  service.rs  task.rs
fuel-block-producer/src/task/: tests.rs  transaction_selector.rs
fuel-client/: Cargo.toml
fuel-client/src/: client.rs
fuel-core/: Cargo.toml
fuel-core-interfaces/: Cargo.toml
fuel-core-interfaces/src/: block_producer.rs  db.rs  lib.rs
fuel-core/src/: args.rs  executor.rs  main.rs  schema.rs  service.rs  tx_pool.rs
fuel-core/src/service/: modules.rs
fuel-p2p/src/: service.rs
fuel-relayer/src/: service.rs
fuel-tests/tests/: balances.rs
fuel-tests/tests/tx/: utxo_validation.rs
sway-dap/: Cargo.toml  Makefile  debug.sdl
sway-dap/src/: args.rs  client.rs  eval.rs  lib.rs  main.rs  message.rs  output.rs  request.rs  response.rs  schema.rs  service.rs
