[package]
name = "dap"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = {version="1.0", features=["derive"]}
serde_json = {version="1.0", features=["raw_value"]}

[build-dependencies]
async-graphql = "2.8"
fuel-core = {path="../fuel-core"}
serde_json = {version="1.0", features=["raw_value"]}
schemafy_lib = "0.5"
