[package]
name = "fuel-gql-client"
version = "0.6.2"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["concurrency", "cryptography::cryptocurrencies", "emulators"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel-vm", "vm"]
license = "BUSL-1.1"
repository = "https://github.com/FuelLabs/fuel-core"
description = "Tx client and schema specification."

[[bin]]
name = "fuel-gql-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
# todo: this is turning on too many features in reqwest
cynic = { version = "0.14", features = ["reqwest"] }
derive_more = { version = "0.99" }
fuel-storage = "0.1"
fuel-tx = { version = "0.9", features = ["serde-types"] }
fuel-types = { version = "0.3", features = ["serde-types"] }
fuel-vm = { version = "0.8", features = ["serde-types"] }
futures = "0.3"
hex = "0.4"
itertools = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
thiserror = "1.0"

[dev-dependencies]
insta = "1.8"

[build-dependencies]
schemafy_lib = "0.5"
serde_json = { version = "1.0", features = ["raw_value"] }

[features]
test-helpers = []
# allows opting into using the local openssl ca store (does not require OpenSSL to be installed)
native-certs = ["reqwest/rustls-native-certs"]
