[package]
name = "sway-dap"
version = "0.1.0"
edition = "2018"

[dependencies]
dap = {path="../dap"}
tracing = "0.1"
serde = {version="1.0", features=["derive"]}
serde_json = {version="1.0", features=["raw_value"]}
surf = "2.2"
tokio = {version="1.6", features=["full"]}
hex = "0.4"

clap = "2.33"
structopt = "0.3"
tracing-subscriber = "0.2"

fuel-vm = {git="ssh://git@github.com/FuelLabs/fuel-vm.git"}
